force text to wrap where needed in tile view https://bugzilla.redhat.com/show_bug.cgi?id=1282974

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -252,6 +252,7 @@ table.table.table-selectable tbody tr.selected td {
       @include text-overflow();
     }
     dd {
+      word-break: break-all;
       margin-left: 110px;
     }
   }
